--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^5.0.1",
+    "@mendable/firecrawl-js": "^1.24.0",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "airtable": "^0.12.2",
+    "chalk": "^5.4.1",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.27",
+    "lodash.omit": "^4.5.0",
+    "ms": "^2.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
@@ -32,6 +38,8 @@
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/lodash.omit": "^4",
+    "@types/ms": "^2",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
