--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint . --fix",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
@@ -15,11 +16,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^5.0.1",
     "@mendable/firecrawl-js": "^1.24.0",
+    "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "airtable": "^0.12.2",
     "chalk": "^5.4.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.27",
     "lodash.omit": "^4.5.0",
@@ -43,7 +46,16 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "dotenv-cli": "^8.0.0",
+    "eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "tailwindcss": "^4.1.4",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
