--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "airtable": "^0.12.2",
+    "browser-image-compression": "^2.0.2",
     "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "image-to-base64": "^2.2.0",
     "isbot": "^5.1.27",
     "lodash.omit": "^4.5.0",
     "ms": "^2.1.3",
@@ -31,6 +33,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
     "react-spring": "^9.7.5",
+    "resize-base64": "^1.0.12",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
@@ -41,6 +44,7 @@
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/image-to-base64": "^2",
     "@types/lodash.omit": "^4",
     "@types/ms": "^2",
     "@types/node": "^20",
